# py

./: .gitignore  README.md  pyproject.toml
supadata/: __init__.py  automate.py  client.py  errors.py  issue.txt  types.py  web.py  youtube.py
tests/: __init__.py  test_client.py
