[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "supadata"
version = "1.3.0"
authors = [{ name = "Supadata", email = "support@supadata.ai" }]
dependencies = ["requests >= 2.28.1"]
description = "The official Python SDK for Supadata - scrape web and YouTube content with ease"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ["supadata", "web-scraping", "youtube", "transcripts", "api", "llm", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://supadata.ai"
repository = "https://github.com/supadata/py"
documentation = "https://supadata.ai/documentation"

[project.optional-dependencies]
test = [
    "pytest >= 7.0.0",
    "requests-mock >= 1.11.0",
]